# loom

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  SECURITY.md
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: AGENT_USAGE.md  LOOM_API_CONTRACT.md  LOOM_ARCHITECTURE_DECISIONS.md  LOOM_CLI_CONTRACT.md  LOOM_COMPLETE_GUIDE_ZH.md  LOOM_STATE_MODEL.md  LOOM_V1_ACCEPTANCE.md  LOOM_V1_CORE_SPEC.md  RELEASING.md  STATUS_FIELD_CLASSIFICATION.md  SUPPORTED_AGENTS.md  pr-20-signal-report.md
docs/plan/: light-theme-preview.html  panel-trash-ui-spec.md  skill-diagnose-spec.md  skill-history-timeline-spec.md  trash-mvp-spec.md
panel/: index.html  landing.html  package-lock.json  package.json  vite.config.ts
panel/src/: panel-entry.tsx  types.ts
scripts/: e2e-agent-flow.sh  perf-smoke.sh
src/: cli.rs  main.rs  types.rs
src/commands/: agent_cmds.rs  backup_cmds.rs  event_store.rs  helpers.rs  history_cmds.rs  mod.rs  observed_tests.rs  projections.rs  skill_cmds.rs  skill_diagnose.rs  skill_diagnose_tests.rs  skill_verify.rs  sync_cmds.rs  target_cmds.rs  trash_cmds.rs  version_cmds.rs  watch_cmds.rs  workspace_cmds.rs
src/gitops/: mod.rs
src/panel/: auth.rs  (+5 more)
tests/: agent_preflight.rs  backup.rs  capture.rs  cli_surface.rs  doctor.rs  import_observed.rs  project.rs  reliability.rs  remove.rs  rollback_preview.rs  root_guard.rs  skill_history_cli.rs  skill_verify.rs  status.rs  trash.rs  watch.rs  workspace_init.rs  write.rs
(+91 files in other folders)
