[package]
name = "skillloom"
version = "0.1.2"
edition = "2024"
build = "build.rs"
description = "Git-backed skill manager and registry for AI coding agents"
license = "MIT"
repository = "https://github.com/majiayu000/loom"
homepage = "https://github.com/majiayu000/loom"
readme = "README.md"
keywords = ["agents", "skills", "registry", "git", "cli"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "/.claude/",
    "/.omx/",
    "/docs/artifacts/",
    "/panel/dist/",
    "/panel/node_modules/",
    "/skills/",
    "/state/",
    "/target/",
]

[[bin]]
name = "loom"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.9", features = ["json"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
include_dir = "0.7.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.150"
tar = "0.4.44"
thiserror = "2.0.12"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "signal", "process", "io-util"] }
ts-rs = { version = "12.0.1", features = ["chrono-impl"] }
uuid = { version = "1.23.2", features = ["v4", "serde"] }
walkdir = "2.5.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
